--- a/CompanyConfig/Default/ChatChainConfig.json
+++ b/CompanyConfig/Default/ChatChainConfig.json
@@ -1,158 +1,99 @@
 {
-  "chain": [
-    {
-      "phase": "DomainUnderstanding",
-      "phaseType": "SimplePhase",
-      "max_turn_step": -1,
-      "need_reflect": "True"
-    },
-    {
-      "phase": "DataUnderstanding",
-      "phaseType": "SimplePhase",
-      "max_turn_step": -1,
-      "need_reflect": "True"
-    },
-    {
-      "phase": "DataPreparation",
-      "phaseType": "ComposedPhase",
-      "cycleNum": 2,
-      "Composition": [
-        {
-          "phase": "DataCleaning",
+  "chain": [{
+          "phase": "DemandAnalysis",
           "phaseType": "SimplePhase",
           "max_turn_step": -1,
           "need_reflect": "True"
-        },
-        {
-          "phase": "DataPipeline",
+      },
+      {
+          "phase": "LanguageChoose",
           "phaseType": "SimplePhase",
           "max_turn_step": -1,
           "need_reflect": "True"
-        }
-      ]
-    },
-    {
-      "phase": "Analysis",
-      "phaseType": "ComposedPhase",
-      "cycleNum": 1,
-      "Composition": [
-        {
-          "phase": "ExploratoryAnalysis",
+      },
+      {
+          "phase": "Coding",
           "phaseType": "SimplePhase",
-          "max_turn_step": -1,
+          "max_turn_step": 1,
+          "need_reflect": "False"
+      },
+      {
+          "phase": "CodeCompleteAll",
+          "phaseType": "ComposedPhase",
+          "cycleNum": 10,
+          "Composition": [{
+              "phase": "CodeComplete",
+              "phaseType": "SimplePhase",
+              "max_turn_step": 1,
+              "need_reflect": "False"
+          }]
+      },
+      {
+          "phase": "CodeReview",
+          "phaseType": "ComposedPhase",
+          "cycleNum": 3,
+          "Composition": [{
+                  "phase": "CodeReviewComment",
+                  "phaseType": "SimplePhase",
+                  "max_turn_step": 1,
+                  "need_reflect": "False"
+              },
+              {
+                  "phase": "CodeReviewModification",
+                  "phaseType": "SimplePhase",
+                  "max_turn_step": 1,
+                  "need_reflect": "False"
+              }
+          ]
+      },
+      {
+          "phase": "Test",
+          "phaseType": "ComposedPhase",
+          "cycleNum": 3,
+          "Composition": [{
+                  "phase": "TestErrorSummary",
+                  "phaseType": "SimplePhase",
+                  "max_turn_step": 1,
+                  "need_reflect": "False"
+              },
+              {
+                  "phase": "TestModification",
+                  "phaseType": "SimplePhase",
+                  "max_turn_step": 1,
+                  "need_reflect": "False"
+              }
+          ]
+      },
+      {
+          "phase": "EnvironmentDoc",
+          "phaseType": "SimplePhase",
+          "max_turn_step": 1,
           "need_reflect": "True"
-        },
-        {
-          "phase": "StatisticalAnalysis",
-          "phaseType": "SimplePhase",
-          "max_turn_step": -1,
-          "need_reflect": "True"
-        }
-      ]
-    },
-    {
-      "phase": "FeatureEngineering",
-      "phaseType": "SimplePhase",
-      "max_turn_step": -1,
-      "need_reflect": "True"
-    },
-    {
-      "phase": "ModelDevelopment",
-      "phaseType": "ComposedPhase",
-      "cycleNum": 2,
-      "Composition": [
-        {
-          "phase": "ModelSelection",
+      },
+      {
+          "phase": "Manual",
           "phaseType": "SimplePhase",
           "max_turn_step": 1,
           "need_reflect": "False"
-        },
-        {
-          "phase": "ModelTraining",
-          "phaseType": "SimplePhase",
-          "max_turn_step": 1,
-          "need_reflect": "False"
-        },
-        {
-          "phase": "ModelValidation",
-          "phaseType": "SimplePhase",
-          "max_turn_step": 1,
-          "need_reflect": "False"
-        },
-        {
-          "phase": "HyperparameterTuning",
-          "phaseType": "SimplePhase",
-          "max_turn_step": 1,
-          "need_reflect": "False"
-        }
-      ]
-    },
-    {
-      "phase": "ModelInterpretability",
-      "phaseType": "SimplePhase",
-      "max_turn_step": -1,
-      "need_reflect": "True"
-    },
-    {
-      "phase": "CodeReview",
-      "phaseType": "SimplePhase",
-      "max_turn_step": -1,
-      "need_reflect": "True"
-    },
-    {
-      "phase": "Testing",
-      "phaseType": "ComposedPhase",
-      "cycleNum": 2,
-      "Composition": [
-        {
-          "phase": "TestExecution",
-          "phaseType": "SimplePhase",
-          "max_turn_step": 1,
-          "need_reflect": "False"
-        },
-        {
-          "phase": "ErrorSummary",
-          "phaseType": "SimplePhase",
-          "max_turn_step": 1,
-          "need_reflect": "False"
-        },
-        {
-          "phase": "CorrectionImplementation",
-          "phaseType": "SimplePhase",
-          "max_turn_step": 1,
-          "need_reflect": "False"
-        }
-      ]
-    },
-    {
-      "phase": "Reporting",
-      "phaseType": "SimplePhase",
-      "max_turn_step": -1,
-      "need_reflect": "True"
-    }
+      }
   ],
   "recruitments": [
-    "Chief Executive Officer",
-    "Counselor",
-    "Chief Human Resource Officer",
-    "Chief Product Officer",
-    "Chief Technology Officer",
-    "Data Analyst",
-    "Data Engineer",
-    "ML Engineer",
-    "Data Scientist",
-    "Statistician",
-    "Model Interpreter",
-    "Report Writer",
-    "Code Reviewer",
-    "Software Test Engineer"
+      "Chief Executive Officer",
+      "Counselor",
+      "Chief Human Resource Officer",
+      "Chief Product Officer",
+      "Chief Technology Officer",
+      "Programmer",
+      "Code Reviewer",
+      "Software Test Engineer",
+      "Chief Creative Officer"
   ],
   "clear_structure": "True",
-  "gui_design": "False",
+  "gui_design": "True",
   "git_management": "False",
-  "self_improve": "False",
   "web_spider": "False",
+  "self_improve": "False",
   "incremental_develop": "False",
   "with_memory": "False",
-  "background_prompt": "DataDev is a data analysis company powered by multiple intelligent agents, with a multi-agent organizational structure and the mission of 'delivering actionable insights through data'."
+  "background_prompt": "ChatDev is a software company powered by multiple intelligent agents, such as chief executive officer, chief human resources officer, chief product officer, chief technology officer, etc, with a multi-agent organizational structure and the mission of 'changing the digital world through programming'."
 }
